--- a/responsive.css
+++ b/responsive.css
@@ -17,10 +17,10 @@
     text-decoration: none;
   }
   h1{
-    font-size: 36.4px;
+    font-size: 70px;
     font-weight: normal;
     text-align: center;
-    padding: 30px 0 15px 0;
+    padding: 30px 10px 15px 10px;
   }
   .clear{
     clear: left;
@@ -161,13 +161,13 @@
     background-repeat: no-repeat;
     background-position: 70%;
     background-size: cover;
-    padding:15px 30px;
+    padding:40px 30px 100px 30px;
   }
   .entertaiment_message{
     max-width: 930px;
     font-weight: 300px;
     display: block;
-    font-size: 2.3em;
+    font-size: 80px;
     text-align:center;
     margin: 100px auto;
   }
@@ -177,7 +177,7 @@
     margin: 20px auto;
   }
   .entertaiment_lefts{
-    height: 200px;
+    height: 350px;
     width: 100%;
     background-color: rgba(31, 31, 31, 0.8);
   }
@@ -185,17 +185,17 @@
   line-height: 1.5;
   margin: 0;
   padding: 0;
-  font-size: 17px;
+  font-size: 27px;
   color: rgba(255, 255, 255, 1.0);
   }
   .entertaiment_acount{
-    height:53px;
+    height: 80px;
     width: 600px;
     background-color: #0068bf;
     margin: 30px auto 0 auto;
   }
   .entertaiment_acount p{
-    font-size: 16px;
+    font-size: 25px;
     padding: auto;
     text-align:center;
     color:white;
@@ -209,15 +209,17 @@
     margin: 0 auto;
   }
   .services_headline{
-    font-size:16px;
+    font-size:32px;
     font-weight: 700;
     line-height: 24px;
+    padding-bottom: 10px;
   }
   .services_text{
-    font-size: 20px;
+    font-size: 30px;
     margin-top: 14px;
     line-height: 30px;
-    height: 100px;
+    height: 180px;
+    padding-bottom: 20px;
   }
   .content_button{
     width: 100%;
@@ -225,15 +227,15 @@
   }
   .content_details{
     display: inline-block;
-    height: 60px;
-    width: 600px;
+    height: 80px;
+    width: 500px;
     background-color: #0068bf;
     margin: 30px auto;
     text-align:center;
   }
   .content_details p{
-    font-size: 20px;
-    padding: 17px 15px 12px 15px;
+    font-size: 30px;
+    padding: 17px 15px 20px 15px;
     text-align:center;
     color:white;
     margin: 0 auto;
@@ -314,7 +316,7 @@
     margin:0 0 10px 0;
   }
   .pay_info_p{
-    font-size: 22px;
+    font-size: 25px;
   }
   .pay_info p{
     padding-left: 20px;
@@ -325,21 +327,20 @@
   }
   .psn_comtact{
     width: 100%;
-    height: 160px;
+    height: 330px;
     background-color: rgba(238,238,238,1.0);
     padding:54px 5%;
-    margin: 0 auto;
+    margin: 50px auto 0 auto;
   }
   .psn_content_center{
-    height: 51px;
+    height: 250px;
     width: 100%;
     margin: 0 auto;
   }
   .psn_content_center p{
-    font-size:14px;
-    height: 21px;
-    width: 25%;
-    float: left;
+    font-size:35px;
+    height: 50px;
+    width: 100%;
     color: #00a2ff;
     padding:0 15px;
   }
@@ -353,15 +354,14 @@
     background-color: rgba(0,55,145,1.0);
   }
   .support_center{
-    height: 221px;
     width: 100%;
     margin: 0 auto;
   }
   .support_headline{
-    font-size: 18px;
+    font-size: 35px;
   }
   .support_text{
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 25px;
   }
@@ -379,7 +379,7 @@
     float: left;
     margin: 20px 0;
     color: white;
-    padding:0 15px;
+    padding:10px 15px;
   }
   .support_service{
     height: 210px;
@@ -387,7 +387,7 @@
     float: left;
     margin: 20px 0;
     color: white;
-    padding:0 15px;
+    padding:10px 15px;
   }
   .support_news{
     height: 210px;
@@ -395,7 +395,7 @@
     float: left;
     margin: 20px 0;
     color: white;
-    padding:0 15px;
+    padding:40px 15px;
   }
   .support_support{
     height: 210px;
@@ -403,7 +403,7 @@
     margin: 20px 0;
     float: left;
     color: white;
-    padding:0 15px;
+    padding:40px 15px;
   }
   footer{
     width: 100%;
