--- a/stylesheet.css
+++ b/stylesheet.css
@@ -314,13 +314,14 @@ color: rgba(255, 255, 255, 1.0);
   width: 100%;
   height: 160px;
   background-color: rgba(238,238,238,1.0);
-  padding:54px 15px;
+  padding:54px 20%;
   margin: 0 auto;
 }
 .psn_content_center{
   height: 51px;
   width: 100%;
   margin: 0 auto;
+  float: left;
 }
 .psn_content_center p{
   font-size:14px;
